Update info: refs

--- a/doc/PAX-rap-optimizations-paper/references.bib
+++ b/doc/PAX-rap-optimizations-paper/references.bib
@@ -166,3 +166,24 @@
    Journal="https://hardenedlinux.github.io/gnu/toolchains/security/2017/06/13/ARM_PA.html",
    Year="2017",
 }
+
+@Aricle{zet17,
+   Author="WikiChip",
+   Title="{ARMv8.5的MTE}",
+   Journal="https://en.wikichip.org/wiki/arm/mte",
+   Year="2018",
+}
+
+@Aricle{paxfuture,
+   Author="PaX team",
+   Title="{PaX RAP针对ROP的威胁建模和初始设计}",
+   Journal="https://pax.grsecurity.net/docs/pax-future.txt",
+   Year="2003",
+}
+
+@Aricle{intelcet,
+   Author="Intel",
+   Title="{未来的Intel CET}",
+   Journal="https://software.intel.com/sites/default/files/managed/4d/2a/control-flow-enforcement-technology-preview.pdf",
+   Year="2019",
+}
