update ref info

--- a/doc/PAX-rap-optimizations-paper/references.bib
+++ b/doc/PAX-rap-optimizations-paper/references.bib
@@ -167,7 +167,7 @@
    Year="2017",
 }
 
-@Aricle{zet17,
+@Aricle{armmte,
    Author="WikiChip",
    Title="{ARMv8.5的MTE}",
    Journal="https://en.wikichip.org/wiki/arm/mte",
@@ -175,7 +175,7 @@
 }
 
 @Aricle{paxfuture,
-   Author="PaX team",
+   Author="PaX",
    Title="{PaX RAP针对ROP的威胁建模和初始设计}",
    Journal="https://pax.grsecurity.net/docs/pax-future.txt",
    Year="2003",
