--- a/doc/PAX-rap-optimizations-paper/references.bib
+++ b/doc/PAX-rap-optimizations-paper/references.bib
@@ -152,7 +152,7 @@
    Pages="i87-i101",
 }
 
-@Aricle{Shacham07,
+@Article{Shacham07,
    Author="H. Shacham",
    Title="{structural variant discovery by integrated paired-end and split-read analysis}",
    Journal="Proceedings of the 14th ACM conference on Computer and communications security",
@@ -160,28 +160,28 @@
    Pages="i552-i561",
 }
 
-@Aricle{zet17,
+@Article{zet17,
    Author="zet",
    Title="{ARMv8.3-A PA在GCC里的相关实现}",
    Journal="https://hardenedlinux.github.io/gnu/toolchains/security/2017/06/13/ARM_PA.html",
    Year="2017",
 }
 
-@Aricle{armmte,
+@Article{armmte,
    Author="WikiChip",
    Title="{ARMv8.5的MTE}",
    Journal="https://en.wikichip.org/wiki/arm/mte",
    Year="2018",
 }
 
-@Aricle{paxfuture,
+@Article{paxfuture,
    Author="PaX",
    Title="{PaX RAP针对ROP的威胁建模和初始设计}",
    Journal="https://pax.grsecurity.net/docs/pax-future.txt",
    Year="2003",
 }
 
-@Aricle{intelcet,
+@Article{intelcet,
    Author="Intel",
    Title="{未来的Intel CET}",
    Journal="https://software.intel.com/sites/default/files/managed/4d/2a/control-flow-enforcement-technology-preview.pdf",
